# examplePy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.md
docs/built_examples/: index.rst  sample.rst  sample_codeobj.pickle
docs/examples/: README.txt  sample.py
docs/tutorials/: index.md  plot_sample-2.ipynb  plot_sample.ipynb
example1_build_setuptools_twine/: README.md  pyproject.toml
example1_build_setuptools_twine/docs/_build/doctrees/: environment.pickle
example1_build_setuptools_twine/docs/_build/doctrees/built_examples/: plot_sample-1.doctree  plot_sample.doctree
example1_build_setuptools_twine/docs/_build/html/: search.html  searchindex.js
example1_build_setuptools_twine/docs/_build/html/built_examples/: index.html  plot_sample-1.html  plot_sample.html
example1_build_setuptools_twine/docs/built_examples/: plot_sample-1.py.md5  plot_sample.ipynb  plot_sample.py.md5
example1_setuptools_scm_sphinx_gallery/: LICENSE  requirements.txt
example1_setuptools_scm_sphinx_gallery/docs/: conf.py
example1_setuptools_scm_sphinx_gallery/docs/_build/html/: objects.inv
example1_setuptools_scm_sphinx_gallery/docs/_build/html/_sources/built_examples/: plot_sample-1.rst.txt
example1_setuptools_scm_sphinx_gallery/docs/built_examples/: index.rst  sg_execution_times.rst
example1_setuptools_scm_sphinx_gallery/examplePy/: module1.py
example1b_build_setuptools_scm/: README.md  pyproject.toml  requirements.txt
example1b_build_setuptools_scm/docs/_build/doctrees/built_examples/: sg_execution_times.doctree
example1b_build_setuptools_scm/docs/_build/html/built_examples/: sg_execution_times.html
example1b_build_setuptools_scm/docs/built_examples/: plot_sample-1.ipynb  plot_sample-1_codeobj.pickle
example2_flit/: README.md  pyproject.toml
example2_flit/docs/_build/html/: .buildinfo  index.html
example3_poetry/docs/: index.md
example3_poetry/docs/_build/doctrees/built_examples/: index.doctree
example3_poetry/docs/_build/html/_downloads/efacc09eff848bcd1fde90aa56f28e4d/: plot_sample.py
example3_poetry/docs/_build/html/_sources/built_examples/: plot_sample.rst.txt
example3_poetry/examplePy/: __init__.py
example4_pdm/: README.md  pyproject.toml
example4_pdm/docs/_build/doctrees/: index.doctree
example4_pdm/docs/_build/html/: genindex.html
example4_pdm/docs/built_examples/: plot_sample_codeobj.pickle
example4_pdm/examplePy/: __init__.py  module1.py
example5_meson/: .mesonpy-native-file.ini  README.md  meson.build  pure.py  pyproject.toml
example6_pdm_meson/: .gitignore  .mesonpy-native-file.ini  .pdm.toml  README.md  meson.build  pyproject.toml  requirements.txt
example6_pdm_meson/examplePy/: __init__.py  module1.py
