[tool.pdm]

[project]
name = "examplePy"
version = "0.1.00"
description = "The best package ever made in the history of people-kind."
authors = [
    {name = "pyOpenSci", email = "email@email.com"},
]

requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "requests>=2.28.2",
]

# This is the config for using the mesonpy back-end with pdm
[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

# You can delete this but this is the config for using the pdm back-end
# [build-system]
# requires = ["pdm-pep517>=1.0.0"]
# build-backend = "pdm.pep517.api"
